# sciAppFramework

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
example/: Monitor.pro
example/source/gui/: controlMonitorWidget.cpp  controlMonitorWidget.h  exampleLoadMonitor.cpp  exampleLoadMonitor.h  main.cpp  monitorThread.cpp  monitorThread.h  outputMonitorWidget.cpp  outputMonitorWidget.h
example/source/monitor/: monitor.cpp  monitor.h
source/examples/: CMakeLists.txt  testCatalogueWidget.cpp  testControlWidget.cpp  testInputWidget.cpp  testMainWidget.cpp  testMultiInputWidget.cpp  testMultiInputWidgetXml.cpp  testOutputWidget.cpp  testStructInputConnection.cpp  testWaitWidget.cpp  testXmlSettingsStorage.cpp
source/sciAppFramework/: .inputWidget.cpp.swp  CMakeLists.txt  adaptedInputWidget.cpp  adaptedInputWidget.h  catalogueWidget.cpp  catalogueWidget.h  comboMultiWidget.cpp  comboMultiWidget.h  comportbox.h  controlWidget.cpp  controlWidget.h  inputWidget.cpp  inputWidget.h  labelInputWidget.cpp  labelInputWidget.h  labelinput.h  layoutOperations.cpp  layoutOperations.h  longSpinBox.cpp  longSpinBox.h  main.h  mainWidget.cpp  mainWidget.h  measureControlWidget.cpp  measureControlWidget.h  measureMainWidget.cpp  measureMainWidget.h  measurementParameters.cpp  measurementParameters.h  measurementThread.cpp  measurementThread.h  multiInputWidget.cpp  multiInputWidget.h  multiInputXmlFactory.cpp  multiInputXmlFactory.h  okcancelDialog.cpp  okcancelDialog.h  outputSettingsWidget.cpp  outputSettingsWidget.h  outputWidget.cpp  (+17 more)
source/tests/: CMakeLists.txt  testCatalogueWidget.cpp  testControlWidget.cpp  testInputWidget.cpp  testMainWidget.cpp  testMultiInputWidget.cpp  testMultiInputWidgetXml.cpp  testOutputWidget.cpp  testStructInputConnection.cpp
